version2.0_solve/y.output
   0  $accept : translation_unit $end

   1  primary_expr : identifier
   2               | const_int
   3               | const_char
   4               | const_float
   5               | string_literal
   6               | '(' expr ')'

   7  postfix_expr : primary_expr
   8               | postfix_expr '[' expr ']'
   9               | postfix_expr '(' ')'
  10               | postfix_expr '(' argument_expr_list ')'
  11               | postfix_expr '.' identifier
  12               | postfix_expr op_ptr identifier
  13               | postfix_expr op_pp
  14               | postfix_expr op_dd
  15               | '(' type_name ')' '{' init_list '}'
  16               | '(' type_name ')' '{' init_list ',' '}'

  17  argument_expr_list : assignment_expr
  18                     | argument_expr_list ',' assignment_expr

  19  unary_expr : postfix_expr
  20             | op_pp unary_expr
  21             | op_dd unary_expr
  22             | op_unary cast_expr
  23             | SIZEOF unary_expr
  24             | SIZEOF '(' type_name ')'

  25  op_unary : '&'
  26           | '*'
  27           | '+'
  28           | '-'
  29           | '~'
  30           | '!'

  31  cast_expr : unary_expr
  32            | '(' type_name ')' cast_expr

  33  multiplicative_expr : cast_expr
  34                      | multiplicative_expr '*' cast_expr
  35                      | multiplicative_expr '/' cast_expr
  36                      | multiplicative_expr '%' cast_expr

  37  additive_expr : multiplicative_expr
  38                | additive_expr '+' multiplicative_expr
  39                | additive_expr '-' multiplicative_expr

  40  shift_expr : additive_expr
  41             | shift_expr op_lshift additive_expr
  42             | shift_expr op_rshift additive_expr

  43  relational_expr : shift_expr
  44                  | relational_expr '<' shift_expr
  45                  | relational_expr '>' shift_expr
  46                  | relational_expr op_le shift_expr
  47                  | relational_expr op_ge shift_expr

  48  equality_expr : relational_expr
  49                | equality_expr op_eq relational_expr
  50                | equality_expr op_ne relational_expr

  51  AND_expr : equality_expr
  52           | AND_expr '&' equality_expr

  53  ex_OR_expr : AND_expr
  54             | ex_OR_expr '^' AND_expr

  55  in_OR_expr : ex_OR_expr
  56             | in_OR_expr '|' ex_OR_expr

  57  logical_AND_expr : in_OR_expr
  58                   | logical_AND_expr op_and in_OR_expr

  59  logical_OR_expr : logical_AND_expr
  60                  | logical_OR_expr op_or logical_AND_expr

  61  conditional_expr : logical_OR_expr
  62                   | logical_OR_expr '?' expr ':' conditional_expr

  63  assignment_expr : conditional_expr
  64                  | unary_expr op_assign assignment_expr

  65  expr : assignment_expr
  66       | expr ',' assignment_expr

  67  constant_expr : conditional_expr

  68  declaration : declaration_spec ';'
  69              | declaration_spec init_declarator_list ';'

  70  declaration_spec : storage_class_spec
  71                   | storage_class_spec declaration_spec
  72                   | type_spec
  73                   | type_spec declaration_spec
  74                   | type_qualifier
  75                   | type_qualifier declaration_spec
  76                   | func_spec
  77                   | func_spec declaration_spec

  78  init_declarator_list : init_declarator
  79                       | init_declarator_list ',' init_declarator

  80  init_declarator : declarator
  81                  | declarator '=' initializer

  82  storage_class_spec : STATIC
  83                     | storage_class_specifier

  84  type_spec : type_specifier
  85            | struct_or_union_spec
  86            | enum_spec
  87            | typedef_name

  88  struct_or_union_spec : struct_or_union '{' struct_declaration_list '}'
  89                       | struct_or_union identifier '{' struct_declaration_list '}'
  90                       | struct_or_union identifier

  91  struct_declaration_list : struct_declaration
  92                          | struct_declaration_list struct_declaration

  93  struct_declaration : spec_qual_list struct_declarator_list ';'

  94  spec_qual_list : type_spec
  95                 | type_spec spec_qual_list
  96                 | type_qual
  97                 | type_qual spec_qual_list

  98  struct_declarator_list : struct_declarator
  99                         | struct_declarator_list ',' struct_declarator

 100  struct_declarator : declarator
 101                    | ':' constant_expr
 102                    | declarator ':' constant_expr

 103  enum_spec : ENUM '{' enum_list '}'
 104            | ENUM identifier '{' enum_list '}'
 105            | ENUM '{' enum_list ',' '}'
 106            | ENUM identifier '{' enum_list ',' '}'
 107            | ENUM identifier

 108  enum_list : enumerator
 109            | enum_list ',' enumerator

 110  enumerator : enum_constant
 111             | enum_constant '=' constant_expr

 112  enum_constant : identifier

 113  type_qual : type_qualifier

 114  func_spec : INLINE

 115  declarator : direct_declarator
 116             | pointer direct_declarator

 117  direct_declarator : identifier
 118                    | '(' declarator ')'
 119                    | direct_declarator '[' ']'
 120                    | direct_declarator '[' type_qual_list ']'
 121                    | direct_declarator '[' assignment_expr ']'
 122                    | direct_declarator '[' type_qual_list assignment_expr ']'
 123                    | direct_declarator '[' STATIC assignment_expr ']'
 124                    | direct_declarator '[' STATIC type_qual_list assignment_expr ']'
 125                    | direct_declarator '[' type_qual_list STATIC assignment_expr ']'
 126                    | direct_declarator '[' '*' ']'
 127                    | direct_declarator '[' type_qual_list '*' ']'
 128                    | direct_declarator '(' para_type_list ')'
 129                    | direct_declarator '(' identifier_list ')'
 130                    | direct_declarator '(' ')'

 131  pointer : '*'
 132          | '*' type_qual_list
 133          | '*' pointer
 134          | '*' type_qual_list pointer

 135  type_qual_list : type_qual
 136                 | type_qual_list type_qual

 137  para_type_list : para_list
 138                 | para_list ',' ellipsis

 139  para_list : para_declaration
 140            | para_list ',' para_declaration

 141  para_declaration : declaration_spec declarator
 142                   | declaration_spec
 143                   | declaration_spec abstract_declarator

 144  identifier_list : identifier
 145                  | identifier_list ',' identifier

 146  type_name : spec_qual_list
 147            | spec_qual_list abstract_declarator

 148  abstract_declarator : pointer
 149                      | direct_abstract_declarator
 150                      | pointer direct_abstract_declarator

 151  direct_abstract_declarator : '(' abstract_declarator ')'
 152                             | '[' ']'
 153                             | direct_abstract_declarator '[' ']'
 154                             | '[' type_qual_list ']'
 155                             | '[' assignment_expr ']'
 156                             | direct_abstract_declarator '[' type_qual_list ']'
 157                             | direct_abstract_declarator '[' assignment_expr ']'
 158                             | '[' type_qual_list assignment_expr ']'
 159                             | direct_abstract_declarator '[' type_qual_list assignment_expr ']'
 160                             | '[' STATIC assignment_expr ']'
 161                             | direct_abstract_declarator '[' STATIC assignment_expr ']'
 162                             | '[' STATIC type_qual_list assignment_expr ']'
 163                             | direct_abstract_declarator '[' STATIC type_qual_list assignment_expr ']'
 164                             | '[' type_qual_list STATIC assignment_expr ']'
 165                             | direct_abstract_declarator '[' type_qual_list STATIC assignment_expr ']'
 166                             | '[' '*' ']'
 167                             | direct_abstract_declarator '[' '*' ']'
 168                             | direct_abstract_declarator '(' para_type_list ')'
 169                             | direct_abstract_declarator '(' ')'
 170                             | '(' para_type_list ')'
 171                             | '(' ')'

 172  typedef_name : identifier

 173  initializer : assignment_expr
 174              | '{' init_list '}'
 175              | '{' init_list ',' '}'

 176  init_list : initializer
 177            | designation initializer
 178            | init_list ',' initializer
 179            | init_list ',' designation initializer

 180  designation : designator_list '='

 181  designator_list : designator
 182                  | designator_list designator

 183  designator : '[' constant_expr ']'
 184             | '.' identifier

 185  statement : labeled_statement
 186            | compound_statement
 187            | expr_statement
 188            | selection_statement
 189            | iteration_statement
 190            | jump_statement

 191  labeled_statement : identifier ':' statement
 192                    | CASE constant_expr ':' statement
 193                    | DEFAULT ':' statement

 194  compound_statement : '{' '}'
 195                     | '{' block_item_list '}'

 196  block_item_list : block_item
 197                  | block_item_list block_item

 198  block_item : declaration
 199             | statement

 200  expr_statement : ';'
 201                 | expr ';'

 202  selection_statement : IF '(' expr ')' statement
 203                      | IF '(' expr ')' statement ELSE statement
 204                      | SWITCH '(' expr ')' statement

 205  iteration_statement : WHILE '(' expr ')' statement
 206                      | DO statement WHILE '(' expr ')' ';'
 207                      | FOR '(' ')' statement
 208                      | FOR '(' expr ';' ';' ')' statement
 209                      | FOR '(' ';' expr ';' ')' statement
 210                      | FOR '(' ';' ';' expr ')' statement
 211                      | FOR '(' expr ';' expr ';' ')' statement
 212                      | FOR '(' expr ';' ';' expr ')' statement
 213                      | FOR '(' ';' expr ';' expr ')' statement
 214                      | FOR '(' expr ';' expr ';' expr ')' statement
 215                      | FOR '(' declaration ';' ')' statement
 216                      | FOR '(' declaration expr ';' ')' statement
 217                      | FOR '(' declaration ';' expr ')' statement
 218                      | FOR '(' declaration expr ';' expr ')' statement

 219  jump_statement : GOTO identifier ';'
 220                 | CONTINUE ';'
 221                 | BREAK ';'
 222                 | RETURN ';'
 223                 | RETURN expr ';'

 224  translation_unit : external_declaration
 225                   | translation_unit external_declaration

 226  external_declaration : func_definition
 227                       | declaration

 228  func_definition : declaration_spec declarator compound_statement
 229                  | declaration_spec declarator declaration_list compound_statement

 230  declaration_list : declaration
 231                   | declaration_list declaration

state 0
	$accept : . translation_unit $end  (0)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	.  error

	translation_unit  goto 9
	declaration  goto 10
	declaration_spec  goto 11
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	external_declaration  goto 18
	func_definition  goto 19


state 1
	func_spec : INLINE .  (114)

	.  reduce 114


state 2
	enum_spec : ENUM . '{' enum_list '}'  (103)
	enum_spec : ENUM . identifier '{' enum_list '}'  (104)
	enum_spec : ENUM . '{' enum_list ',' '}'  (105)
	enum_spec : ENUM . identifier '{' enum_list ',' '}'  (106)
	enum_spec : ENUM . identifier  (107)

	identifier  shift 20
	'{'  shift 21
	.  error


state 3
	storage_class_spec : STATIC .  (82)

	.  reduce 82


4: shift/reduce conflict (shift 8, reduce 74) on identifier
state 4
	declaration_spec : type_qualifier .  (74)
	declaration_spec : type_qualifier . declaration_spec  (75)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'*'  reduce 74
	'('  reduce 74
	')'  reduce 74
	'['  reduce 74
	','  reduce 74
	';'  reduce 74

	declaration_spec  goto 22
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17


state 5
	storage_class_spec : storage_class_specifier .  (83)

	.  reduce 83


state 6
	type_spec : type_specifier .  (84)

	.  reduce 84


state 7
	struct_or_union_spec : struct_or_union . '{' struct_declaration_list '}'  (88)
	struct_or_union_spec : struct_or_union . identifier '{' struct_declaration_list '}'  (89)
	struct_or_union_spec : struct_or_union . identifier  (90)

	identifier  shift 23
	'{'  shift 24
	.  error


state 8
	typedef_name : identifier .  (172)

	.  reduce 172


state 9
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (225)

	$end  accept
	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	.  error

	declaration  goto 10
	declaration_spec  goto 11
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	external_declaration  goto 25
	func_definition  goto 19


state 10
	external_declaration : declaration .  (227)

	.  reduce 227


state 11
	declaration : declaration_spec . ';'  (68)
	declaration : declaration_spec . init_declarator_list ';'  (69)
	func_definition : declaration_spec . declarator compound_statement  (228)
	func_definition : declaration_spec . declarator declaration_list compound_statement  (229)

	identifier  shift 26
	'*'  shift 27
	'('  shift 28
	';'  shift 29
	.  error

	init_declarator_list  goto 30
	init_declarator  goto 31
	declarator  goto 32
	direct_declarator  goto 33
	pointer  goto 34


12: shift/reduce conflict (shift 8, reduce 70) on identifier
state 12
	declaration_spec : storage_class_spec .  (70)
	declaration_spec : storage_class_spec . declaration_spec  (71)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'*'  reduce 70
	'('  reduce 70
	')'  reduce 70
	'['  reduce 70
	','  reduce 70
	';'  reduce 70

	declaration_spec  goto 35
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17


13: shift/reduce conflict (shift 8, reduce 72) on identifier
state 13
	declaration_spec : type_spec .  (72)
	declaration_spec : type_spec . declaration_spec  (73)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'*'  reduce 72
	'('  reduce 72
	')'  reduce 72
	'['  reduce 72
	','  reduce 72
	';'  reduce 72

	declaration_spec  goto 36
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17


14: shift/reduce conflict (shift 8, reduce 76) on identifier
state 14
	declaration_spec : func_spec .  (76)
	declaration_spec : func_spec . declaration_spec  (77)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'*'  reduce 76
	'('  reduce 76
	')'  reduce 76
	'['  reduce 76
	','  reduce 76
	';'  reduce 76

	declaration_spec  goto 37
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17


state 15
	type_spec : struct_or_union_spec .  (85)

	.  reduce 85


state 16
	type_spec : enum_spec .  (86)

	.  reduce 86


state 17
	type_spec : typedef_name .  (87)

	.  reduce 87


state 18
	translation_unit : external_declaration .  (224)

	.  reduce 224


state 19
	external_declaration : func_definition .  (226)

	.  reduce 226


state 20
	enum_spec : ENUM identifier . '{' enum_list '}'  (104)
	enum_spec : ENUM identifier . '{' enum_list ',' '}'  (106)
	enum_spec : ENUM identifier .  (107)

	'{'  shift 38
	INLINE  reduce 107
	ENUM  reduce 107
	STATIC  reduce 107
	type_qualifier  reduce 107
	storage_class_specifier  reduce 107
	type_specifier  reduce 107
	struct_or_union  reduce 107
	identifier  reduce 107
	'*'  reduce 107
	'('  reduce 107
	')'  reduce 107
	'['  reduce 107
	','  reduce 107
	':'  reduce 107
	';'  reduce 107


state 21
	enum_spec : ENUM '{' . enum_list '}'  (103)
	enum_spec : ENUM '{' . enum_list ',' '}'  (105)

	identifier  shift 39
	.  error

	enum_list  goto 40
	enumerator  goto 41
	enum_constant  goto 42


state 22
	declaration_spec : type_qualifier declaration_spec .  (75)

	.  reduce 75


state 23
	struct_or_union_spec : struct_or_union identifier . '{' struct_declaration_list '}'  (89)
	struct_or_union_spec : struct_or_union identifier .  (90)

	'{'  shift 43
	INLINE  reduce 90
	ENUM  reduce 90
	STATIC  reduce 90
	type_qualifier  reduce 90
	storage_class_specifier  reduce 90
	type_specifier  reduce 90
	struct_or_union  reduce 90
	identifier  reduce 90
	'*'  reduce 90
	'('  reduce 90
	')'  reduce 90
	'['  reduce 90
	','  reduce 90
	':'  reduce 90
	';'  reduce 90


state 24
	struct_or_union_spec : struct_or_union '{' . struct_declaration_list '}'  (88)

	ENUM  shift 2
	type_qualifier  shift 44
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	.  error

	type_spec  goto 45
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	struct_declaration_list  goto 46
	struct_declaration  goto 47
	spec_qual_list  goto 48
	type_qual  goto 49


state 25
	translation_unit : translation_unit external_declaration .  (225)

	.  reduce 225


state 26
	direct_declarator : identifier .  (117)

	.  reduce 117


state 27
	pointer : '*' .  (131)
	pointer : '*' . type_qual_list  (132)
	pointer : '*' . pointer  (133)
	pointer : '*' . type_qual_list pointer  (134)

	type_qualifier  shift 44
	'*'  shift 27
	identifier  reduce 131
	'('  reduce 131
	')'  reduce 131
	'['  reduce 131
	','  reduce 131

	type_qual  goto 50
	pointer  goto 51
	type_qual_list  goto 52


state 28
	direct_declarator : '(' . declarator ')'  (118)

	identifier  shift 26
	'*'  shift 27
	'('  shift 28
	.  error

	declarator  goto 53
	direct_declarator  goto 33
	pointer  goto 34


state 29
	declaration : declaration_spec ';' .  (68)

	.  reduce 68


state 30
	declaration : declaration_spec init_declarator_list . ';'  (69)
	init_declarator_list : init_declarator_list . ',' init_declarator  (79)

	','  shift 54
	';'  shift 55
	.  error


state 31
	init_declarator_list : init_declarator .  (78)

	.  reduce 78


state 32
	init_declarator : declarator .  (80)
	init_declarator : declarator . '=' initializer  (81)
	func_definition : declaration_spec declarator . compound_statement  (228)
	func_definition : declaration_spec declarator . declaration_list compound_statement  (229)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'{'  shift 56
	'='  shift 57
	','  reduce 80
	';'  reduce 80

	declaration  goto 58
	declaration_spec  goto 59
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	compound_statement  goto 60
	declaration_list  goto 61


state 33
	declarator : direct_declarator .  (115)
	direct_declarator : direct_declarator . '[' ']'  (119)
	direct_declarator : direct_declarator . '[' type_qual_list ']'  (120)
	direct_declarator : direct_declarator . '[' assignment_expr ']'  (121)
	direct_declarator : direct_declarator . '[' type_qual_list assignment_expr ']'  (122)
	direct_declarator : direct_declarator . '[' STATIC assignment_expr ']'  (123)
	direct_declarator : direct_declarator . '[' STATIC type_qual_list assignment_expr ']'  (124)
	direct_declarator : direct_declarator . '[' type_qual_list STATIC assignment_expr ']'  (125)
	direct_declarator : direct_declarator . '[' '*' ']'  (126)
	direct_declarator : direct_declarator . '[' type_qual_list '*' ']'  (127)
	direct_declarator : direct_declarator . '(' para_type_list ')'  (128)
	direct_declarator : direct_declarator . '(' identifier_list ')'  (129)
	direct_declarator : direct_declarator . '(' ')'  (130)

	'('  shift 62
	'['  shift 63
	INLINE  reduce 115
	ENUM  reduce 115
	STATIC  reduce 115
	type_qualifier  reduce 115
	storage_class_specifier  reduce 115
	type_specifier  reduce 115
	struct_or_union  reduce 115
	identifier  reduce 115
	')'  reduce 115
	'{'  reduce 115
	','  reduce 115
	':'  reduce 115
	';'  reduce 115
	'='  reduce 115


state 34
	declarator : pointer . direct_declarator  (116)

	identifier  shift 26
	'('  shift 28
	.  error

	direct_declarator  goto 64


state 35
	declaration_spec : storage_class_spec declaration_spec .  (71)

	.  reduce 71


state 36
	declaration_spec : type_spec declaration_spec .  (73)

	.  reduce 73


state 37
	declaration_spec : func_spec declaration_spec .  (77)

	.  reduce 77


state 38
	enum_spec : ENUM identifier '{' . enum_list '}'  (104)
	enum_spec : ENUM identifier '{' . enum_list ',' '}'  (106)

	identifier  shift 39
	.  error

	enum_list  goto 65
	enumerator  goto 41
	enum_constant  goto 42


state 39
	enum_constant : identifier .  (112)

	.  reduce 112


state 40
	enum_spec : ENUM '{' enum_list . '}'  (103)
	enum_spec : ENUM '{' enum_list . ',' '}'  (105)
	enum_list : enum_list . ',' enumerator  (109)

	'}'  shift 66
	','  shift 67
	.  error


state 41
	enum_list : enumerator .  (108)

	.  reduce 108


state 42
	enumerator : enum_constant .  (110)
	enumerator : enum_constant . '=' constant_expr  (111)

	'='  shift 68
	'}'  reduce 110
	','  reduce 110


state 43
	struct_or_union_spec : struct_or_union identifier '{' . struct_declaration_list '}'  (89)

	ENUM  shift 2
	type_qualifier  shift 44
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	.  error

	type_spec  goto 45
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	struct_declaration_list  goto 69
	struct_declaration  goto 47
	spec_qual_list  goto 48
	type_qual  goto 49


state 44
	type_qual : type_qualifier .  (113)

	.  reduce 113


45: shift/reduce conflict (shift 8, reduce 94) on identifier
state 45
	spec_qual_list : type_spec .  (94)
	spec_qual_list : type_spec . spec_qual_list  (95)

	ENUM  shift 2
	type_qualifier  shift 44
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'*'  reduce 94
	'('  reduce 94
	')'  reduce 94
	'['  reduce 94
	':'  reduce 94

	type_spec  goto 45
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	spec_qual_list  goto 70
	type_qual  goto 49


state 46
	struct_or_union_spec : struct_or_union '{' struct_declaration_list . '}'  (88)
	struct_declaration_list : struct_declaration_list . struct_declaration  (92)

	ENUM  shift 2
	type_qualifier  shift 44
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'}'  shift 71
	.  error

	type_spec  goto 45
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	struct_declaration  goto 72
	spec_qual_list  goto 48
	type_qual  goto 49


state 47
	struct_declaration_list : struct_declaration .  (91)

	.  reduce 91


state 48
	struct_declaration : spec_qual_list . struct_declarator_list ';'  (93)

	identifier  shift 26
	'*'  shift 27
	'('  shift 28
	':'  shift 73
	.  error

	declarator  goto 74
	struct_declarator_list  goto 75
	struct_declarator  goto 76
	direct_declarator  goto 33
	pointer  goto 34


49: shift/reduce conflict (shift 8, reduce 96) on identifier
state 49
	spec_qual_list : type_qual .  (96)
	spec_qual_list : type_qual . spec_qual_list  (97)

	ENUM  shift 2
	type_qualifier  shift 44
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'*'  reduce 96
	'('  reduce 96
	')'  reduce 96
	'['  reduce 96
	':'  reduce 96

	type_spec  goto 45
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	spec_qual_list  goto 77
	type_qual  goto 49


state 50
	type_qual_list : type_qual .  (135)

	.  reduce 135


state 51
	pointer : '*' pointer .  (133)

	.  reduce 133


state 52
	pointer : '*' type_qual_list .  (132)
	pointer : '*' type_qual_list . pointer  (134)
	type_qual_list : type_qual_list . type_qual  (136)

	type_qualifier  shift 44
	'*'  shift 27
	identifier  reduce 132
	'('  reduce 132
	')'  reduce 132
	'['  reduce 132
	','  reduce 132

	type_qual  goto 78
	pointer  goto 79


state 53
	direct_declarator : '(' declarator . ')'  (118)

	')'  shift 80
	.  error


state 54
	init_declarator_list : init_declarator_list ',' . init_declarator  (79)

	identifier  shift 26
	'*'  shift 27
	'('  shift 28
	.  error

	init_declarator  goto 81
	declarator  goto 82
	direct_declarator  goto 33
	pointer  goto 34


state 55
	declaration : declaration_spec init_declarator_list ';' .  (69)

	.  reduce 69


state 56
	compound_statement : '{' . '}'  (194)
	compound_statement : '{' . block_item_list '}'  (195)

	INLINE  shift 1
	DO  shift 83
	FOR  shift 84
	WHILE  shift 85
	BREAK  shift 86
	CONTINUE  shift 87
	GOTO  shift 88
	RETURN  shift 89
	IF  shift 90
	SWITCH  shift 91
	ENUM  shift 2
	CASE  shift 92
	DEFAULT  shift 93
	STATIC  shift 3
	SIZEOF  shift 94
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 95
	const_int  shift 96
	const_char  shift 97
	const_float  shift 98
	string_literal  shift 99
	op_pp  shift 100
	op_dd  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'('  shift 105
	'{'  shift 56
	'}'  shift 106
	'&'  shift 107
	'~'  shift 108
	'!'  shift 109
	';'  shift 110
	.  error

	primary_expr  goto 111
	expr  goto 112
	postfix_expr  goto 113
	assignment_expr  goto 114
	unary_expr  goto 115
	op_unary  goto 116
	cast_expr  goto 117
	multiplicative_expr  goto 118
	additive_expr  goto 119
	shift_expr  goto 120
	relational_expr  goto 121
	equality_expr  goto 122
	AND_expr  goto 123
	ex_OR_expr  goto 124
	in_OR_expr  goto 125
	logical_AND_expr  goto 126
	logical_OR_expr  goto 127
	conditional_expr  goto 128
	declaration  goto 129
	declaration_spec  goto 59
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	statement  goto 130
	labeled_statement  goto 131
	compound_statement  goto 132
	expr_statement  goto 133
	selection_statement  goto 134
	iteration_statement  goto 135
	jump_statement  goto 136
	block_item_list  goto 137
	block_item  goto 138


state 57
	init_declarator : declarator '=' . initializer  (81)

	SIZEOF  shift 94
	identifier  shift 139
	const_int  shift 96
	const_char  shift 97
	const_float  shift 98
	string_literal  shift 99
	op_pp  shift 100
	op_dd  shift 101
	'+'  shift 102
	'-'  shift 103
	'*'  shift 104
	'('  shift 105
	'{'  shift 140
	'&'  shift 107
	'~'  shift 108
	'!'  shift 109
	.  error

	primary_expr  goto 111
	postfix_expr  goto 113
	assignment_expr  goto 141
	unary_expr  goto 115
	op_unary  goto 116
	cast_expr  goto 117
	multiplicative_expr  goto 118
	additive_expr  goto 119
	shift_expr  goto 120
	relational_expr  goto 121
	equality_expr  goto 122
	AND_expr  goto 123
	ex_OR_expr  goto 124
	in_OR_expr  goto 125
	logical_AND_expr  goto 126
	logical_OR_expr  goto 127
	conditional_expr  goto 128
	initializer  goto 142


state 58
	declaration_list : declaration .  (230)

	.  reduce 230


state 59
	declaration : declaration_spec . ';'  (68)
	declaration : declaration_spec . init_declarator_list ';'  (69)

	identifier  shift 26
	'*'  shift 27
	'('  shift 28
	';'  shift 29
	.  error

	init_declarator_list  goto 30
	init_declarator  goto 31
	declarator  goto 82
	direct_declarator  goto 33
	pointer  goto 34


state 60
	func_definition : declaration_spec declarator compound_statement .  (228)

	.  reduce 228


state 61
	func_definition : declaration_spec declarator declaration_list . compound_statement  (229)
	declaration_list : declaration_list . declaration  (231)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 8
	'{'  shift 56
	.  error

	declaration  goto 143
	declaration_spec  goto 59
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	compound_statement  goto 144


state 62
	direct_declarator : direct_declarator '(' . para_type_list ')'  (128)
	direct_declarator : direct_declarator '(' . identifier_list ')'  (129)
	direct_declarator : direct_declarator '(' . ')'  (130)

	INLINE  shift 1
	ENUM  shift 2
	STATIC  shift 3
	type_qualifier  shift 4
	storage_class_specifier  shift 5
	type_specifier  shift 6
	struct_or_union  shift 7
	identifier  shift 145
	')'  shift 146
	.  error

	declaration_spec  goto 147
	storage_class_spec  goto 12
	type_spec  goto 13
	func_spec  goto 14
	struct_or_union_spec  goto 15
	enum_spec  goto 16
	typedef_name  goto 17
	para_type_list  goto 148
	identifier_list  goto 149
	para_list  goto 150
	para_declaration  goto 151


state 63
	direct_declarator : direct_declarator '[' . ']'  (119)
	direct_declarator : direct_declarator '[' . type_qual_list ']'  (120)
	direct_declarator : direct_declarator '[' . assignment_expr ']'  (121)
	direct_declarator : direct_declarator '[' . type_qual_list assignment_expr ']'  (122)
	direct_declarator : direct_declarator '[' . STATIC assignment_expr ']'  (123)
	direct_declarator : direct_declarator '[' . STATIC type_qual_list assignment_expr ']'  (124)
	direct_declarator : direct_declarator '[' . type_qual_list STATIC assignment_expr ']'  (125)
	direct_declarator : direct_declarator '[' . '*' ']'  (126)
	direct_declarator : direct_declarator '[' . type_qual_list '*' ']'  (127)
